[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysidexpr"
version = "0.0.1"
authors = [
  { name="Ethan Lew", email="elew@galois.com" },
]
description = "utilities for our system id experiments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"